--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Portfolio</title>
+
+    <title>Contact</title>
 </head>
 <body>
     <header id = "header1">
@@ -18,18 +19,12 @@
         <a href="https://www.linkedin.com/in/jake-albiston"><img id ="linkedin" src="Linkedin logo.png"></a>
         </div>
     </header>  
-    
-    <h1 id="h1">My Portfolio</h1>
-<br>
-<div id="pic">
-<img id="db" src ="becky and I.jpg">
-</div>
-<h1>About</h1>
-<p>My name is Jake Albiston.</p>  
-<p>I have been a javascript web developer for almost two months now</p>
-<p>I learned web development at DevMountain in a 4 month long coding bootcamp.</p>
-<p>I am a husband, and a father of a four year old and a two month old</p>
-<p>I love watching football and spending time with my family</p>
-<p>Check out my page, feel free to reach out to me if you have any questions!</p>
+<h1>I would love to hear from you!  Feel free to reach me at:</h1>
+
+  <li>jacob.albiston@gmail.com</li>
+  <a href="https://www.linkedin.com/in/jake-albiston">LinkedIn</a>
+
+
+
 </body>
 </html>
