--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Portfolio</title>
+    <title>Projects</title>
 </head>
 <body>
     <header id = "header1">
@@ -19,17 +19,19 @@
         </div>
     </header>  
     
-    <h1 id="h1">My Portfolio</h1>
-<br>
-<div id="pic">
-<img id="db" src ="becky and I.jpg">
+
+<div id="projectheader">
+    <h1>Hyperemisis Project</h1>
 </div>
-<h1>About</h1>
-<p>My name is Jake Albiston.</p>  
-<p>I have been a javascript web developer for almost two months now</p>
-<p>I learned web development at DevMountain in a 4 month long coding bootcamp.</p>
-<p>I am a husband, and a father of a four year old and a two month old</p>
-<p>I love watching football and spending time with my family</p>
-<p>Check out my page, feel free to reach out to me if you have any questions!</p>
+<div id="project">
+    <img id="hglanding" src="HGlanding.JPG">
+    <img id="hgimg" src="HG screenshot.JPG">
+    
+    </div>
+    <div id ="hellYeah">
+        <p>I am currently working on a project that allows<br>pregnant women with Hyperemisis Gravadum to share their stories and read other's.</p>
+</div>
+
+
 </body>
 </html>
