--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Portfolio</title>
+    <title>Skills</title>
 </head>
 <body>
     <header id = "header1">
@@ -19,17 +19,20 @@
         </div>
     </header>  
     
-    <h1 id="h1">My Portfolio</h1>
-<br>
-<div id="pic">
-<img id="db" src ="becky and I.jpg">
-</div>
-<h1>About</h1>
-<p>My name is Jake Albiston.</p>  
-<p>I have been a javascript web developer for almost two months now</p>
-<p>I learned web development at DevMountain in a 4 month long coding bootcamp.</p>
-<p>I am a husband, and a father of a four year old and a two month old</p>
-<p>I love watching football and spending time with my family</p>
-<p>Check out my page, feel free to reach out to me if you have any questions!</p>
+    <h1 id="h1">What I do</h1>
+    <br>
+
+    <ul>
+        <li>I am always learning new things with JavaScript</li>
+        <li>I like to code with the frontend and backend together</li>
+        <li>I work with axios to access endpoints</li>
+        <li>I also love working with CSS and experimenting with it</li>
+    </ul>
+<h1>What Skills I am continually Learning</h1>
+    <ul>
+        <li>Javascript</li>
+        <li>Backend using nodemon</li>
+
+    </ul>
 </body>
 </html>
