added some contact stuff

--- a/skills.html
+++ b/skills.html
@@ -18,21 +18,23 @@
         <a href="https://www.linkedin.com/in/jake-albiston"><img id ="linkedin" src="Linkedin logo.png"></a>
         </div>
     </header>  
-    
+    <div id="Ido">
     <h1 id="h1">What I do</h1>
-    <br>
-
+    
     <ul>
         <li>I am always learning new things with JavaScript</li>
         <li>I like to code with the frontend and backend together</li>
         <li>I work with axios to access endpoints</li>
         <li>I also love working with CSS and experimenting with it</li>
     </ul>
+</div>
+<div id="skills">
 <h1>What Skills I am continually Learning</h1>
     <ul>
         <li>Javascript</li>
         <li>Backend using nodemon</li>
 
     </ul>
+</div>
 </body>
 </html>
