--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,17 @@
         <a href="https://github.com/jalbiston"><img id ="github" src="github logo.png"></a>
         <a href="https://www.linkedin.com/in/jake-albiston"><img id ="linkedin" src="Linkedin logo.png"></a>
         </div>
-    </header>  
+    </header> 
+    <div id="h1s">
 <h1>I would love to hear from you!  Feel free to reach me at:</h1>
+</div>
 
-  <li>jacob.albiston@gmail.com</li>
-  <a href="https://www.linkedin.com/in/jake-albiston">LinkedIn</a>
-
-
+  
+  
+  <li>My Linked in Profile:<br><br></li><a class="othera" href="https://www.linkedin.com/in/jake-albiston">LinkedIn</a>
+  <br>
+  <br>
+  <li>Send me an email at: jacob.albiston@gmail.com</li>
 
 </body>
 </html>
