--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <a href="https://www.linkedin.com/in/jake-albiston"><img id ="linkedin" src="Linkedin logo.png"></a>
         </div>
     </header>  
-    
+    <div id="h1s">
     <h1 id="h1">My Portfolio</h1>
+    </div>
 <br>
 <div id="pic">
 <img id="db" src ="becky and I.jpg">
