--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,10 @@
     </div>
     <div id ="hellYeah">
         <p>I am currently working on a project that allows<br>pregnant women with Hyperemisis Gravadum to share their stories and read other's.</p>
-</div>
 
+        
+</div>
+<div id="video" style="position: relative; padding-bottom: 56.25%; height: 0; margin-top:100px; margin-left: 650px;"><iframe src="https://www.loom.com/embed/c823c358828c4931bd2ce41c4b4fe6bb" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 50%; height: 50%;"></iframe></div>
 
 </body>
 </html>
