centered some shit

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  
+
 
     <title>Contact</title>
+    
 </head>
 <body>
     <header id = "header1">
@@ -18,7 +22,7 @@
         <a href="https://github.com/jalbiston"><img id ="github" src="github logo.png"></a>
         <a href="https://www.linkedin.com/in/jake-albiston"><img id ="linkedin" src="Linkedin logo.png"></a>
         </div>
-    </header> 
+    </header>  
     <div id="h1s">
 <h1>I would love to hear from you!  Feel free to reach me at:</h1>
 </div>
@@ -29,6 +33,7 @@
   <br>
   <br>
   <li>Send me an email at: jacob.albiston@gmail.com</li>
+  
 
 </body>
 </html>
