--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
 <div id="pic">
 <img id="db" src ="becky and I.jpg">
 </div>
+<div id="about">
 <h1>About</h1>
-<p>My name is Jake Albiston.</p>  
+<p>My name is Jake Albiston.</p>
+<br>  
 <p>I have been a javascript web developer for almost two months now</p>
+<br>
 <p>I learned web development at DevMountain in a 4 month long coding bootcamp.</p>
+<br>
 <p>I am a husband, and a father of a four year old and a two month old</p>
+<br>
 <p>I love watching football and spending time with my family</p>
+<br>
 <p>Check out my page, feel free to reach out to me if you have any questions!</p>
+</div>
 </body>
 </html>
