deleted something off contact page

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    
   
 
 
@@ -29,7 +29,7 @@
 
   
   
-  <li>My Linked in Profile:<br><br></li><a class="othera" href="https://www.linkedin.com/in/jake-albiston">LinkedIn</a>
+  <li>My Linked in Profile:<br><br></li><a class="othera" href="https://www.linkedin.com/in/jake-albiston">https://www.linkedin.com/in/jake-albiston</a>
   <br>
   <br>
   <li>Send me an email at: jacob.albiston@gmail.com</li>
